--- a/local/test2.html
+++ b/local/test2.html
@@ -363,12 +363,19 @@ outline-offset: 4px;
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
+<!-- H1 with SEO + animation -->
 <h1 class="fade hero-title">
 Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
 </h1>
+
+<!-- Supporting text -->
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
 <p class="fade"><strong>Priced Fairly, Done Right.</strong></p>
+
+<!-- CTA button -->
 <a href="tel:07735873694" class="btn fade">Call Now</a>
+
+<!-- Trust badges -->
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
