--- a/local/test2.html
+++ b/local/test2.html
@@ -318,23 +318,6 @@ opacity: 1;
 #action-word.fade-out {
 opacity: 0;
 }
-.menu-toggle {
-background: none;
-border: none;
-padding: 0;
-margin: 0;
-font: inherit;
-color: white;
-cursor: pointer;
-font-size: 1.8rem;
-line-height: 1;
-}
-
-/* Optional: nice accessible focus */
-.menu-toggle:focus {
-outline: 2px solid var(--accent);
-outline-offset: 4px;
-}
 </style>
 </head>
 <body>
@@ -343,7 +326,7 @@ outline-offset: 4px;
 <div class="container">
 <nav>
 <div class="logo">HomeRepairs4U</div>
-<button class="menu-toggle" aria-label="Open navigation menu" aria-expanded="false">☰</button>
+<div class="menu-toggle">☰</div>
 <ul class="menu">
 <li><a href="https://homerepairs4u.com/">Home</a></li>
 <li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
@@ -363,19 +346,11 @@ outline-offset: 4px;
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
-<!-- H1 with SEO + animation -->
 <h1 class="fade hero-title">
-Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
-</h1>
-
-<!-- Supporting text -->
+<span id="action-word">Built</span> Properly.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
-<p class="fade"><strong>Priced Fairly, Done Right.</strong></p>
-
-<!-- CTA button -->
+<p class="fade"><strong></strong>Priced Fairly, Done Right.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now</a>
-
-<!-- Trust badges -->
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
@@ -431,7 +406,7 @@ Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
 <h3 class="fade-child">Roof Cleaning Done Properly</h3>
 <p class="fade-child">We remove moss, lichen, and dirt the right way - first scraping away build-up, then applying a safe chemical treatment to protect from regrowth without destroying your roof tiles!</p>
 <p class="fade-child">View our roof cleaning page.</p>
-  <a href="https://homerepairs4u.com/local/roof-cleaning.html" class="card-btn fade-child">Roof Cleaning</a>
+  <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Roof Cleaning</a>
 </div>
 
 <!-- Card 3 -->
@@ -449,7 +424,7 @@ Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
 <h3 class="fade-child">Ivy Removed Safely and Permanently</h3>
 <p class="fade-child">Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way.</p>
 <p class="fade-child">View our ivy control page.</p>
-<a href="https://homerepairs4u.com/local/ivy-control.html" class="card-btn fade-child">Ivy Removal</a>
+<a href="https://homerepairs4u.com/local/ivy-removal.html" class="card-btn fade-child">Ivy Removal</a>
 </div>
 
 <!-- Card 5 -->
@@ -476,7 +451,7 @@ Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
 <h3 class="fade-child">Emergency Window Boarding Up.</h3>
 <p class="fade-child">We provide fast, secure window boarding to protect your property after damage or break-ins. Strong materials fitted properly to keep your home or business safe until permanent repairs are carried out.</p>
 <p class="fade-child">View our security window boarding page.</p>
-<a href="https://homerepairs4u.com/local/emergency-window-boarding.html" class="card-btn fade-child">Window Boarding</a>
+<a href="https://homerepairs4u.com/local/window-boarding.html" class="card-btn fade-child">Window Boarding</a>
 
 </div>
 
@@ -486,7 +461,7 @@ Property Repairs in Doncaster – <span id="action-word">Built</span> Properly.
 <h3 class="fade-child">Decking Installed and Repaired</h3>
 <p class="fade-child">We install and repair timber decking built to last. From solid foundations to a clean, level finish, every deck is fitted properly for strength, safety, and long-term durability.</p>
 <p class="fade-child">View our decking installation page.</p>
-<a href="https://homerepairs4u.com/local/decking-installation.html" class="card-btn fade-child">Decking Installation</a>
+<a href="https://homerepairs4u.com/local/decking-istallation.html" class="card-btn fade-child">Decking Installation</a>
 </div>
 
 <!-- Card 9 -->
@@ -529,23 +504,12 @@ btn.textContent = parent.classList.contains("show") ? "Read Less ▲" : "Read Mo
 });
 });
 
-.menu-toggle {
-background: none;
-border: none;
-padding: 0;
-margin: 0;
-font: inherit;
-color: white;
-cursor: pointer;
-font-size: 1.8rem;
-line-height: 1;
-}
-
-/* Optional: nice accessible focus */
-.menu-toggle:focus {
-outline: 2px solid var(--accent);
-outline-offset: 4px;
-}
+// Hamburger toggle
+const toggle = document.querySelector('.menu-toggle');
+const menu = document.querySelector('nav ul.menu');
+toggle.addEventListener('click', () => {
+menu.classList.toggle('show');
+});
 });
 </script>
 <script type="application/ld+json">
