--- a/local/test2.html
+++ b/local/test2.html
@@ -318,7 +318,7 @@ opacity: 1;
 #action-word.fade-out {
 opacity: 0;
 }
-  /* Moving Banner Styles */
+/* Moving Banner Styles */
 .moving-banner {
 background: var(--dark);
 color: white;
@@ -390,6 +390,7 @@ animation-duration: 30s;
 <span>✔ Local & Reliable</span>
 </div>
 </div>
+</section>
 
 <section class="stats fade">
 <div class="container">
@@ -420,7 +421,6 @@ animation-duration: 30s;
 <div class="container">
 <h2 class="fade" style="text-align:center;font-size:2.5rem;">Our Services</h2>
 <div class="grid">
-</section>
 
 <!-- 9 Service Cards -->
 <!-- Card 1 -->
@@ -506,7 +506,18 @@ animation-duration: 30s;
 </div>
 </div>
 </section>
-
+  
+<!-- Moving Banner -->
+<section class="moving-banner">
+<div class="banner-track">
+<span>✔ Fully Insured</span>
+<span>✔ Free Written Quotes</span>
+<span>✔ 29+ Years Experience</span>
+<span>✔ Local & Reliable</span>
+<span>✔ Fencing, Roofing, Guttering & More!</span>
+</div>
+</section>
+  
 <footer class="fade">
 <div class="container">
 <p>&copy; 2026 HomeRepairs4U. All rights reserved.</p>
