--- a/local/test2.html
+++ b/local/test2.html
@@ -423,7 +423,18 @@ animation-duration: 30s;
 <!-- Moving Banner -->
 <section class="moving-banner">
 <div class="banner-track">
-<span>✔ Fully Insured</span>
+<span>
+Latest news from HomeRepairs4U: As well as our usual services, we now offer complete exterior home makeovers!&nbsp;&nbsp;&nbsp;
+Clean and protect your roof with professional treatment & recoating.&nbsp;&nbsp;&nbsp;
+Restore your uPVC windows & doors to look like new.&nbsp;&nbsp;&nbsp;
+Keep gutters flowing with clearing, cleaning & repairs.&nbsp;&nbsp;&nbsp;
+Give your conservatory a sparkling roof clean.&nbsp;&nbsp;&nbsp;
+Refresh fences, steel gates & rails with stain and paint.&nbsp;&nbsp;&nbsp;
+Revive patios and driveways with pressure washing.&nbsp;&nbsp;&nbsp;
+Create beautiful decking, gravel areas & landscaping — all done by one trusted team.&nbsp;&nbsp;&nbsp;
+Call Martin: 07735 873694 and see the difference!
+</span>
+<span>✔ Latest News from Home Repairs 4U </span>
 <span>✔ Free Written Quotes</span>
 <span>✔ 29+ Years Experience</span>
 <span>✔ Local & Reliable</span>
