--- a/local/test2.html
+++ b/local/test2.html
@@ -441,6 +441,9 @@ Call Martin: 07735 873694 and see the difference!
 <span>✔ Fencing, Roofing, Guttering & More!</span>
 </div>
 </section>
+<div style="text-align:center; margin-top:20px;">
+<a href="tel:07735873694" class="btn">Call Martin</a>
+</div>
 <div class="grid">
 
 <!-- 9 Service Cards -->
