--- a/local/test2.html
+++ b/local/test2.html
@@ -379,7 +379,7 @@ animation-duration: 70s;
 <div class="hero-overlay"></div>
 <div class="container hero-content">
 <h1 class="fade hero-title">
-<span id="action-word">Built</span> Properly.</h1>
+<span id="action-word">Built</span> Properly Doncaster.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
 <p class="fade"><strong></strong>Priced Fairly, Done Right.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now</a>
