--- a/local/test2.html
+++ b/local/test2.html
@@ -381,13 +381,14 @@ animation-duration: 70s;
 <h1 class="fade hero-title">
 <span id="action-word">Built</span> Properly.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
-<p class="fade"><strong></strong>Priced Fairly, Done Right.</strong></p>
+<p class="fade"><strong>Priced Fairly, Done Right.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
 <span>✔ 29+ Years Experience</span>
 <span>✔ Local & Reliable</span>
+<p style="display:none;">Local fencing, roof cleaning, gutter services and exterior property repairs in Doncaster and surrounding areas.</p>
 </div>
 </div>
 </section>
@@ -457,7 +458,7 @@ Call Martin and see the difference!
 <h3 class="fade-child">Roof Cleaning Done Properly</h3>
 <p class="fade-child">We remove moss, lichen, and dirt the right way - first scraping away build-up, then applying a safe chemical treatment to protect from regrowth without destroying your roof tiles!</p>
 <p class="fade-child">View our roof cleaning page.</p>
-  <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Roof Cleaning</a>
+  <a href="https://homerepairs4u.com/local/roof-cleaning.html" class="card-btn fade-child">Roof Cleaning</a>
 </div>
 
 <!-- Card 3 -->
