--- a/local/test2.html
+++ b/local/test2.html
@@ -382,7 +382,7 @@ animation-duration: 70s;
 <span id="action-word">Built</span> Properly.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
 <p class="fade"><strong>Priced Fairly, Done Right.</strong></p>
-<a href="tel:07735873694" class="btn fade">Call Now</a>
+<a href="tel:07735873694" class="btn fade">Call Now – Free Quote</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
@@ -466,8 +466,8 @@ Call Martin and see the difference!
 <img class="fade-child" src="/images/house-paint.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
 <h3 class="fade-child">Transform Your Homes Exterior</h3>
 <p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks great and lasts for years!</p>
-<a href="https://homerepairs4u.com/local/exterior-painting.html" class="card-btn fade-child">Exterior Painting</a>
 <p class="fade-child">View our exterior painting page.</p>
+<a href="https://homerepairs4u.com/local/exterior-painting.html" class="card-btn fade-child">Exterior Painting</a>
 </div>
 
 <!-- Card 4 -->
@@ -481,7 +481,7 @@ Call Martin and see the difference!
 
 <!-- Card 5 -->
 <div class="card fade">
-<img class="fade-child" src="/images/gutter-service.webp" alt="Gate clearing, cleaning, repairs and replacement - Doncaster">
+<img class="fade-child" src="/images/gutter-service.webp" alt="Gutter clearing, cleaning, repairs and replacement - Doncaster">
 <h3 class="fade-child">Gutters Cleared, Cleaned, Repaired or Replaced.</h3>
 <p class="fade-child">Blocked or damaged gutters can lead to leaks and damp if left unchecked. We clear, clean, repair, or replace guttering properly, ensuring rainwater flows away from your property as it should. No shortcuts — just reliable guttering done right.</p>
 <p class="fade-child">View our gutter services page.</p>
