--- a/local/test2.html
+++ b/local/test2.html
@@ -243,9 +243,10 @@ align-items:center;
 text-align:center;
 }
 .hero h1{
-font-size:2.8rem;
-line-height:1.2;
+font-size:2.4rem;
+line-height:1.15;
 margin-top:20px; /* optional extra spacing from very top */
+max-width: 95%;
 }
 .hero-subtitle {
 font-size: 2rem; /* bigger than before, smaller than H1 */
