--- a/local/test2.html
+++ b/local/test2.html
@@ -362,6 +362,22 @@ margin: 0 40px;
 animation-duration: 70s;
 }
 }
+.hero h1 {
+font-size: 4rem; /* desktop size */
+line-height: 1.2;
+margin-top: 0;
+max-width: 100%;
+text-align: center;
+}
+
+.hero-location {
+display: block;
+font-size: 2rem; /* slightly smaller than main word */
+margin-top: 10px;
+font-weight: 600;
+opacity: 0.9;
+text-align: center;
+}
 </style>
 </head>
 <body>
