--- a/local/test2.html
+++ b/local/test2.html
@@ -555,14 +555,14 @@ Call Martin and see the difference!
 </div>
 </div>
 </section>
- 
+<p class="fade" style="text-align:center;font-weight:600;">
+Serving Doncaster, Askern, Bentley, Adwick-le-Street, Armthorpe and nearby areas.
+</p>
 <footer class="fade">
 <div class="container">
 <p>&copy; 2026 HomeRepairs4U. All rights reserved.</p>
 </div>
-<p style="text-align:center;font-weight:600;">
-Serving Doncaster, Askern, Bentley, Adwick-le-Street, Armthorpe and nearby areas.
-</p>
+
 </footer>
 
 <script>
