--- a/local/test2.html
+++ b/local/test2.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
 <title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
 <meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
 <link rel="canonical" href="https://homerepairs4u.com/local/test2.html">
