--- a/local/test2.html
+++ b/local/test2.html
@@ -459,6 +459,7 @@ Latest news from HomeRepairs4U: As well as our usual services, we now offer comp
 Clean and protect your roof with professional treatment & recoating.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Restore your uPVC windows & doors to look like new.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Keep gutters flowing with clearing, cleaning & repairs.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Repaint the exterior of your house.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Give your conservatory a sparkling roof clean.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Refresh fences, steel gates & rails with stain and paint.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Revive patios and driveways with pressure washing.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
