--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index, follow">
 <title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
 <meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
-<link rel="canonical" href="https://homerepairs4u.com/local/test2.html">
+<link rel="canonical" href="https://homerepairs4u.com/">
 
 <style>
 :root{
@@ -655,7 +655,7 @@ menu.classList.toggle('show');
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Roof Repairs & Roof Cleaning"
+"name": "Roof Cleaning"
 }
 },
 {
@@ -690,7 +690,7 @@ menu.classList.toggle('show');
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Emergency Property Repairs"
+"name": "Emergency Window Boarding"
 }
 }
 ]
