--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -743,7 +743,7 @@ menu.classList.toggle('show');
 </script>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-const words = ["Built Properly","Maintained Properly","Cleaned Properly","Removed Properly","Cleared Properly","Painted Properly","Secured Properly"];
+const words = ["Made Properly","Installed Properly","Set Properly","Levelled Properly","Grounded Properly","Constructed Properly","Secured Right"];
 let index = 0;
 const actionWord = document.getElementById("action-word");
 
