--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ cursor: zoom-in;
 <div class="menu-toggle">☰</div>
 <ul class="menu">
 <li><a href="https://homerepairs4u.com/">Home</a></li>
-<li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
+<li><a href="https://homerepairs4u.com/local/fencing-doncaster.html">Fencing</a></li>
 <li><a href="https://homerepairs4u.com/local/roof-cleaning.html">Roof Cleaning</a></li>
 <li><a href="https://homerepairs4u.com/local/exterior-painting.html">Exterior-Painting</a></li>
 <li><a href="https://homerepairs4u.com/local/ivy-control.html">Ivy-Control</a></li>
