--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -455,12 +455,12 @@ cursor: zoom-in;
 <h1 class="fade hero-title">
 <span id="action-word">Built</span>
 <span class="hero-location">Local Property Repairs in Doncaster</span></h1>
-<p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
-<p class="fade"><strong>Priced Fairly, Done Right.</strong></p>
+<p class="fade">Professional Domestic & Commercial Fence Installation in Doncaster.</p>
+<p class="fade"><strong>Honest Work, Honest Prices.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now – Free Quote</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
-<span>✔ Free Written Quotes</span>
+<span>✔ Free Quotes</span>
 <span>✔ 29+ Years Experience</span>
 <span>✔ Local & Reliable</span>
 </div>
