--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -454,8 +454,7 @@ cursor: zoom-in;
 <div class="container hero-content">
 <h1 class="fade hero-title">
 <span id="action-word">Built</span>
-<span class="hero-location">Local Property Repairs in Doncaster</span></h1>
-<p class="fade">Professional Domestic & Commercial Fence Installation in Doncaster.</p>
+<span class="hero-location">Local Domestic Commercial Fencing in Doncaster</span></h1>
 <p class="fade"><strong>Honest Work, Honest Prices.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now – Free Quote</a>
 <div class="trust-row fade">
