--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -453,8 +453,8 @@ cursor: zoom-in;
 <div class="hero-overlay"></div>
 <div class="container hero-content">
 <h1 class="fade hero-title">
-<span id="action-word">Built</span>
-<span class="hero-location">Local Domestic Commercial Fencing in Doncaster</span></h1>
+<span id="action-word">Local</span>
+<span class="hero-location">Domestic, Commercial Fencing in Doncaster</span></h1>
 <p class="fade"><strong>Honest Work, Honest Prices.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now – Free Quote</a>
 <div class="trust-row fade">
