--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -498,16 +498,10 @@ cursor: zoom-in;
 <section class="moving-banner">
 <div class="banner-track">
 <span>
-Latest news from HomeRepairs4U: As well as our usual services, we now offer complete exterior home makeovers!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Clean and protect your roof with professional treatment & recoating.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Restore your uPVC windows & doors to look like new.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Keep gutters flowing with clearing, cleaning & repairs.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Repaint the exterior of your house.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Give your conservatory a sparkling roof clean.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Refresh fences, steel gates & rails with stain and paint.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Revive patios and driveways with pressure washing.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Create beautiful decking, gravel areas & landscaping — all done by one trusted team.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Call Martin and see the difference!
+Expert fencing in Doncaster – timber panels, steel gates, and all repairs handled with care. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Fully insured local specialists serving Doncaster, Askern, Bentley, and surrounding areas. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Free written quotes for every fencing project, with strong posts, level panels, and secure fixings. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Call Martin today to install your new fence safely and efficiently!
 </span>
 </div>
 </section>
