--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
-<title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
-<meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
+<title>Fencing Services in Doncaster | Domestic & Commercial | HomeRepairs4U</title>
+<meta name="description" content="Reliable fencing services in Doncaster. Strong, level, and secure fences for homes and businesses. Free quotes – call HomeRepairs4U now!">
 <link rel="canonical" href="https://homerepairs4u.com/local/fencing-doncaster.html">
 
 <style>
@@ -472,8 +472,8 @@ cursor: zoom-in;
 
 <div class="stats-grid">
 <div>
-<p class="stat-number">3400+</p>
-<p class="stat-label">Projects Completed</p>
+<p class="stat-number">940+</p>
+<p class="stat-label">Fencing Projects Completed</p>
 </div>
 <div>
 <p class="stat-number">29+</p>
@@ -498,9 +498,9 @@ cursor: zoom-in;
 <section class="moving-banner">
 <div class="banner-track">
 <span>
-Expert fencing in Doncaster – timber panels, steel gates, and all repairs handled with care. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Expert fencing in Doncaster – timber panels and gates, concrete posts and gravel boards, all repairs handled with care. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Fully insured local specialists serving Doncaster, Askern, Bentley, and surrounding areas. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Free written quotes for every fencing project, with strong posts, level panels, and secure fixings. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Free quotes for every fencing project, with structured right, built right, and secured right. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Call Martin today to install your new fence safely and efficiently!
 </span>
 </div>
