--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -514,8 +514,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 1 -->
 <div class="card fade">
 <img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work that lasts, Doncaster">
-<h3 class="fade-child">Strong Straight Fencing Built to Last!</h3>
-<p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boundaries that last!</p>
+<h3 class="fade-child">Durable Fences That Stand the Test of Time</h3>
+<p class="fade-child">We install and repair fencing across Doncaster and nearby towns with precision and care. Every fence is built strong, level, and secure, giving your property a professional finish that lasts for years. Perfect for homes and businesses alike.</p>
 <p class="fade-child">View our fencing service page</p>  
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Fencing Services</a>
 </div>
@@ -523,8 +523,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 2 -->
 <div class="card fade">
 <img class="fade-child" src="/images/roof-clean.webp" alt="Roof Cleaning without damaging your tiles, no pressure wash, Doncaster">
-<h3 class="fade-child">Roof Cleaning Done Properly</h3>
-<p class="fade-child">We remove moss, lichen, and dirt the right way - first scraping away build-up, then applying a safe chemical treatment to protect from regrowth without destroying your roof tiles!</p>
+<h3 class="fade-child">Fair Pricing, No Surprises</h3>
+<p class="fade-child">Our fencing services in Doncaster are competitively priced with transparency you can trust. Get a clear, written quote before we start, so you know exactly what to expect. Quality fencing without overpaying — perfect for both domestic and commercial projects.</p>
 <p class="fade-child">View our roof cleaning page.</p>
   <a href="https://homerepairs4u.com/local/roof-cleaning.html" class="card-btn fade-child">Roof Cleaning</a>
 </div>
@@ -532,8 +532,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 3 -->
 <div class="card fade">
 <img class="fade-child" src="/images/house-paint.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
-<h3 class="fade-child">Transform Your Homes Exterior</h3>
-<p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks great and lasts for years!</p>
+<h3 class="fade-child">Fencing Done Right, Every Time</h3>
+<p class="fade-child">We know Doncaster properties inside out. Every post set, panel fitted, and gate installed is done to last — no shortcuts, no guesswork. Strong fences, built to stand up to the local weather.</p>
 <p class="fade-child">View our exterior painting page.</p>
 <a href="https://homerepairs4u.com/local/exterior-painting.html" class="card-btn fade-child">Exterior Painting</a>
 </div>
@@ -541,8 +541,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 4 -->
 <div class="card fade">
 <img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
-<h3 class="fade-child">Ivy Removed Safely and Permanently</h3>
-<p class="fade-child">Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way.</p>
+<h3 class="fade-child">Fence Repairs That Last</h3>
+<p class="fade-child">Damaged panels, leaning posts, or broken gates? We fix fencing across Doncaster quickly and properly, so your boundaries stay strong and secure. No quick fixes — every repair is built to last.</p>
 <p class="fade-child">View our ivy control page.</p>
 <a href="https://homerepairs4u.com/local/ivy-removal.html" class="card-btn fade-child">Ivy Removal</a>
 </div>
@@ -550,8 +550,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 5 -->
 <div class="card fade">
 <img class="fade-child" src="/images/gutter-service.webp" alt="Gutter clearing, cleaning, repairs and replacement - Doncaster">
-<h3 class="fade-child">Gutters Cleared, Cleaned, Repaired or Replaced.</h3>
-<p class="fade-child">Blocked or damaged gutters can lead to leaks and damp if left unchecked. We clear, clean, repair, or replace guttering properly, ensuring rainwater flows away from your property as it should. No shortcuts — just reliable guttering done right.</p>
+<h3 class="fade-child">Secure Gates & Complete Fencing Solutions</h3>
+<p class="fade-child">From sturdy gates to timber panels, we supply and install everything you need for a complete fence. Every gate fitted properly, every panel aligned — strong, secure, and built to last across Doncaster and nearby areas.</p>
 <p class="fade-child">View our gutter services page.</p>
 <a href="https://homerepairs4u.com/local/gutter-services.html" class="card-btn fade-child">Gutter services</a>
 </div>
@@ -559,8 +559,8 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- Card 6 -->
 <div class="card fade">
 <img class="fade-child" src="/images/pressure-washing-driveways.webp" alt="Pressure washing driveways, patios, decking, Doncaster">
-<h3 class="fade-child">Pressure Washing Remove Moss and Grime.</h3>
-<p class="fade-child">We professionally clean driveways, patios, and paths to remove dirt, algae, and staining. Using the correct pressure for each surface, we restore a clean, safe finish without causing damage. Proper cleaning, long-lasting results.</p>
+<h3 class="fade-child">Choose the Right Materials for Your Fence</h3>
+<p class="fade-child">Timber, steel, or composite — we supply and install quality materials suited to your property and budget. Every panel and post handled with care for a fence that looks great and stands strong, whether for domestic or commercial projects in Doncaster.</p>
 <p class="fade-child">View our pressure washing page.</p>
 <a href="https://homerepairs4u.com/local/pressure-washing.html" class="card-btn fade-child">Pressure Washing</a>
 </div>
