--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -513,7 +513,7 @@ Call Martin today to install your new fence safely and efficiently!
 <!-- 9 Service Cards -->
 <!-- Card 1 -->
 <div class="card fade">
-<img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work that lasts, Doncaster">
+<img class="fade-child" src="/images/fence-panels.webp" alt="Featheredge strong structured fencing work that lasts, Doncaster">
 <h3 class="fade-child">Durable Fences That Stand the Test of Time</h3>
 <p class="fade-child">We install and repair fencing across Doncaster and nearby towns with precision and care. Every fence is built strong, level, and secure, giving your property a professional finish that lasts for years. Perfect for homes and businesses alike.</p>
 <p class="fade-child">View our fencing service page</p>  
@@ -522,7 +522,7 @@ Call Martin today to install your new fence safely and efficiently!
 
 <!-- Card 2 -->
 <div class="card fade">
-<img class="fade-child" src="/images/roof-clean.webp" alt="Roof Cleaning without damaging your tiles, no pressure wash, Doncaster">
+<img class="fade-child" src="/images/before-after-fence.webp" alt="New fence erected in Doncaster. Strong feather edge, concrete posts and gravel boards.">
 <h3 class="fade-child">Fair Pricing, No Surprises</h3>
 <p class="fade-child">Our fencing services in Doncaster are competitively priced with transparency you can trust. Get a clear, written quote before we start, so you know exactly what to expect. Quality fencing without overpaying — perfect for both domestic and commercial projects.</p>
 <p class="fade-child">View our roof cleaning page.</p>
