--- a/local/fencing-doncaster.html
+++ b/local/fencing-doncaster.html
@@ -549,7 +549,7 @@ Call Martin today to install your new fence safely and efficiently!
 
 <!-- Card 5 -->
 <div class="card fade">
-<img class="fade-child" src="/images/gutter-service.webp" alt="Gutter clearing, cleaning, repairs and replacement - Doncaster">
+<img class="fade-child" src="/images/bespoke-gate.webp" alt="Made to measure garden fencing and gates, Doncaster">
 <h3 class="fade-child">Secure Gates & Complete Fencing Solutions</h3>
 <p class="fade-child">From sturdy gates to timber panels, we supply and install everything you need for a complete fence. Every gate fitted properly, every panel aligned — strong, secure, and built to last across Doncaster and nearby areas.</p>
 <p class="fade-child">View our gutter services page.</p>
